@@ -1,6 +1,11 @@
 Changelog
 =========
 
+2015/09/11 (v0.4.2)
+ - Closes bugs :
+   - #7: Error with empty hostname
+   - #6: Windows support of close_fds if you redirect stdin/stdout/stderr
+	
 2015/08/21 (v0.4.1)
  - Closes bugs :
    - #5: only one hostname stored per host
